<?xml version="1.0"?>
<package>
  <name>rabbit_common</name>
  <version>1.0.0</version>

  <description>
    The "rabbit_common" provides basic functionarities such as captureing, playbacking, and saving audio signals.
  </description>

  <maintainer email="yoshiaki@kuis.kyoto-u.ac.jp">Yoshiaki Bando</maintainer>
  <license>MIT</license>

  <url type="website">TODO</url>
  <author email="yoshiaki@kuis.kyoto-u.ac.jp">Yoshiaki Bando</author>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rabbit_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rabbit_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
